# llm-zoomcamp_2026_vh

./: .gitignore  README.md  Untitled-1.py  agent.ipynb  faq_vectors2.db-shm  homework.ipynb  homework1.ipynb  main.py  notebook.ipynb  persistent_rag.ipynb  persistent_rag_ingest.ipynb  pyproject.toml  rag_cleaned.ipynb  rag_helper.py  rag_ingest.ipynb  vector_search.ipynb  vector_search_persistent.ipynb  vector_search_pgvector.ipynb
.ipynb_checkpoints/: vector_search-checkpoint.ipynb
backups/: vector_search_original_copy_20260627_134328.ipynb  vector_search_recovered_20260627_134328.ipynb
llm-zoomcamp-hw2/: homework_hw2.ipynb  pyproject.toml
